# djangoPlatformForStady

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
deploy/: deploy.sh
docker/nginx/: nginx.conf
github/workflows/: ci-cd.yml
lms_project/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_options_and_more.py  0004_remove_course_created_at_remove_lesson_order_and_more.py  0005_course_currency_course_price.py  0006_course_updated_at.py
payments/: models.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py
tests/: test_lessons.py  test_subscriptions.py
users/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_city_alter_user_email_and_more.py
web/: entrypoint.sh
