[tool.poetry]
name = "djangoplatformforstady"
version = "0.1.0"
description = ""
authors = ["Fish3r228 <zayarobert30@gmail.com>"]
readme = "README.md"

# Указываем директории с исходным кодом
packages = [
    { include = "lms_project" }
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.5"
djangorestframework = "^3.16.1"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
stripe = "^12.5.0"
celery = "^5.5.3"
redis = "^6.4.0"
django-celery-beat = "^2.8.1"
python-decouple = "^3.8"
gunicorn = "^23.0.0"
drf_yasg = "1.21.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
